syntax = "proto3";

package order.middleware.app.config.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/order/middleware/v1/app/config";

import "basetypes/v1/conds.proto";
import "basetypes/order/v1/enums.proto";

message AppConfigReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppID = 30;
    optional bool EnableSimulateOrder = 40;
    optional basetypes.order.v1.SimulateOrderCouponMode SimulateOrderCouponMode = 70;
    optional string SimulateOrderCouponProbability = 80;
    optional string SimulateOrderCashableProfitProbability = 90;
    optional uint32 MaxUnpaidOrders = 100;
    optional uint32 MaxTypedCouponsPerOrder = 110;
}

message AppConfig {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"enable_simulate_order"
    bool EnableSimulateOrder = 40;
    // @inject_tag: sql:"simulate_order_coupon_mode"
    string SimulateOrderCouponModeStr = 70;
    basetypes.order.v1.SimulateOrderCouponMode SimulateOrderCouponMode = 80;
    // @inject_tag: sql:"simulate_order_coupon_probability"
    string SimulateOrderCouponProbability = 90;
    // @inject_tag: sql:"simulate_order_cashable_profit_probability"
    string SimulateOrderCashableProfitProbability = 100;
    // @inject_tag: sql:"max_unpaid_orders"
    uint32 MaxUnpaidOrders = 110;
    // @inject_tag: sql:"max_typed_coupons_per_order"
    uint32 MaxTypedCouponsPerOrder = 120;

    // @inject_tag: sql:"created_at"
    uint32     CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32     UpdatedAt = 1010;
}

message Conds {
    basetypes.v1.Uint32Val ID = 10;
    basetypes.v1.StringVal EntID = 20;
    basetypes.v1.StringVal AppID = 30;
}

